# ModernCMakeProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  win_deploy.py
app/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt  mainpage.md
include/: LibName.h
share/: unit_test.hpp
src/: CMakeLists.txt  LibName.cpp
tests/: CMakeLists.txt  tests.cpp
